--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Prueba</name>
+	<name>Demo</name>
 	<comment>Project Prueba created by Buildship.</comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1631510813501</id>
+			<id>0</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
